[tool.poetry]
name = "abliterator"
version = "0.0.0"
license = "MIT"
description = "Python library for transformer activation steering and ablation."
authors = [  ]
readme = "README.md"
packages = [ { include = "abliterator", from = "src" } ]

keywords = [
    "transformers",
    "steering",
    "ablation",
    "interpretability",
    "machine learning",
]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.1"
click = "^8.1.7"
torch = ">=2.3.0"
einops = ">=0.8.0"
datasets = ">=2.19.1"
scikit-learn = ">=1.5.0"
tqdm = ">=4.66.4"
transformers = ">=4.41.1"
jaxtyping = ">=0.2.28 "
transformer-lens = { git = "https://github.com/TransformerLensOrg/TransformerLens.git", branch = "dev" }

[tool.poetry.group.dev.dependencies]
ruff = ">=0.4.5, <1.0"
mypy = ">=1.10.0"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
